# CMake_Template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: AddSanitizers.cmake  AddWarnings.cmake  AutoDetectFiles.cmake  CompileBuildTypes.cmake  EnableClangTidy.cmake  EnableTests.cmake
src/: CMakeLists.txt  example.cpp  example.h  main.cpp
test/: CMakeLists.txt  test.cpp
